css/main.css
html {
  background-color: #e2e2e2;

  font-family: sans-serif;
}

.polaroid {
  margin: 0;
  padding: 10px;
  width: 250px;

  background-color: #fff;
  border-radius: 4px;
  box-shadow: 1px 4px 6px rgba(0, 0, 0, .5);
  position: absolute;
}

.polaroid > img {
  display: block;
  width: 100%;
}

.polaroid > figcaption {
  color: #fff;
  text-shadow: 1px 1px 3px #000;
  left: 50%;
  transform: translateX(-50%);
  text-align: center;
  position: absolute;
}

.polaroid:first-child {
left: 20%;
top: 100px;
transform: rotate(10deg);
z-index: 2000;
}

.polaroid:nth-child(2) {
left: 30%;
top: 150px;
transform: rotate(5deg);
z-index: 3;
}

.polaroid:last-child {
left: 40%;
top: 100px;
z-index: 2;
}

.polaroid:hover {
  box-shadow: 4px 16px 24px rgba(0, 0, 0, 0.75);
}

.polaroid:last-child:hover {
  transform: rotate(-30deg);
  z-index: 1000;
}

